apps/homeassistant/homeassistant/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    matchLabels:
      app: homeassistant
  strategy:
    type: Recreate
  template:
    strategy:
      type: Recreate
    metadata:
      labels:
        app: homeassistant
      annotations:
        k8s.v1.cni.cncf.io/networks: bridge-net
    spec:
      containers:
        - name: homeassistant
          image: homeassistant/home-assistant:2023.8.2
          ports:
            - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
